...
              child: DecoratedBox(
                decoration: BoxDecoration(
                  color: UnikonColorTheme.messageSentIndicatorColor,
                  borderRadius: BorderRadius.circular(borderRadius),
                ),
                child: StreamMessageTextField(
                  key: const Key('messageInputText'),
                  onSubmitted: (_) => _sendMessage(widget.nonOGAttachments),
                  controller: messageInputController,
                  focusNode: widget.focusNode,
                  style: _messageInputTheme.inputTextStyle?.copyWith(
                    color: UnikonColorTheme.messageInputHintColor,
                  ),
...
